...
    "counter.cancel": {
      "extractionState": "manual",
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Cancel session"
          }
        },
        "vi": {
          "stringUnit": {
            "state": "translated",
            "value": "Hủy lượt đếm"
...
